@@ -1,4 +1,4 @@
-/* $Id: match-in-cache.c,v 1.4 2007-07-17 00:03:41 nicm Exp $ */
+/* $Id: match-in-cache.c,v 1.5 2007-08-08 20:00:21 nicm Exp $ */
 
 /*
  * Copyright (c) 2006 Nicholas Marriott <nicm@users.sourceforge.net>
@@ -32,16 +32,6 @@ struct match match_in_cache = {
 	match_in_cache_desc
 };
 
-#ifndef DB
-int
-match_in_cache_match(struct mail_ctx *mctx, unused struct expritem *ei)
-{
-	struct account	*a = mctx->account;
-
-	log_warnx("%s: caches not enabled", a->name);
-	return (MATCH_ERROR);
-}
-#else
 int
 match_in_cache_match(struct mail_ctx *mctx, struct expritem *ei)
 {
@@ -78,7 +68,6 @@ error:
 		xfree(key);
 	return (MATCH_ERROR);
 }
-#endif
 
 void
 match_in_cache_desc(struct expritem *ei, char *buf, size_t len)
