@@ -1,3 +1,7 @@
+06 August 2007
+
+* TDB is now a mandatory dependency.
+
 03 August 2007
 
 * Fetching from mboxes.
@@ -511,4 +515,4 @@
   the mail was very rarely reallocated, now that the header is added it is.
 * Changed all the descriptions to static buffers and audited use of snprintf.
 
-$Id: CHANGES,v 1.135 2007-08-03 11:06:02 nicm Exp $
+$Id: CHANGES,v 1.136 2007-08-08 20:00:20 nicm Exp $
